# studynotes

./: .gitignore  Gemfile  README.md  STATIC_QUANTIZATION_WITH_EAGER_MODE_IN_PYTORCH.ipynb  _config.yml
3d-geometry/: NED-Coordinate-to-OpenCV-Style.md  compile.sh  demo_plane_fitting.py  depth-to-normal.ipynb  fitting-slanted-plane-and-nromal.ipynb  homography-study-notes.md  homography.ipynb  pfmutil.py  plane_fitting_sf.py  setup.py
_posts/: 2024-09-25-welcome-to-jekyll.markdown
algorithm/: coding_01.ipynb  cs600-basic-data-structure.ipynb  sorted-array-to-balanced-BST.ipynb  sorted-linked-list-to-balanced-BST-A.ipynb  sorted-linked-list-to-balanced-BST-B.ipynb  topic000-Data_Structure-01.ipynb  topic001-DFS.ipynb  topic002-BFS.ipynb  topic003_graphs_basics.ipynb  topic004_BST.ipynb  topic005_sorting.ipynb
auto-encoding/: .gitignore  Auto-Encoding-Variational-Bayes.ipynb  ELBO-evidence-lower-bound.ipynb  ELBO-evidence-lower-bound.md  VAEs-study01.ipynb  What-are-Diffusion-Models.ipynb  What-are-Diffusion-Models.md  annotated-diffusion.md  annotated_diffusion.ipynb  annotated_diffusion.md  annotated_diffusion.py  annotated_diffusion_code.ipynb  annotated_diffusion_md.ipynb  attention-and-linear-attention.md  gan-01-dcgan-tensorflow-tutorial.ipynb  gan-03-fgsm_tutorial-pytorch.ipynb  jensen_inequality.md
code-stuff/: pylint-torch-no-member.md
opengl-study/: 01-OpenGL-Overview.md  02-OpenGL-Rendering-Pipeline.md  03-OpenGL-Transformation.md  04-OpenGL-Camera.md  CMakeLists.txt  coordinate_systems_depth.cpp  exam01-matrixModelView.ipynb
(+71 files in other folders)
